--- a/build.gradle
+++ b/build.gradle
@@ -36,13 +36,9 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.jacoco', name: 'jacoco-maven-plugin', version: '0.8.12'
 }
 
-if (project.hasProperty('skip.endtoend.tests') && project.skip.endtoend.tests == 'true') {
-    tasks.named('test') {
-        exclude '**/*EndToEndTest.java'
-    }
-}
 
 tasks.named('test') {
     useJUnitPlatform()
@@ -50,14 +46,6 @@ tasks.named('test') {
 
 jacoco {
     toolVersion = "0.8.12"
-}
-
-jacocoTestReport {
-    dependsOn test
-    reports {
-        html.enabled true
-        xml.enabled true
-    }
 }
 
 test {
