--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -23,10 +23,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Build and test with Gradle
-        run: gradle clean build --no-daemon
+        run: gradle clean build jacocoTestReport --no-daemon
 
       - name: Upload JaCoCo Coverage Report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
-          path: target/site/jacoco/index.html
+          path: build/reports/tests/tests/index.html
